<resources>
    <string name="app_name">Sugapp</string>
    <string name="settings">Settings</string>
    <string name="afternoon_factor">Afternoon factor</string>
    <string name="morning_factor">Morning factor</string>
    <string name="night_factor">Night factor</string>
    <string name="apidra_parameter">Apidra Parameter</string>
    <string name="lantus_parameter">Lantus Parameter</string>
    <string name="lantus_units">Lantus units</string>
    <string name="lantus_alarm">Lantus alarm</string>
    <string name="measure_parameter">Measure Parameter</string>
    <string name="measure_alarm">Measure alarm after</string>
    <string name="khe">KHE</string>
    <string name="units">Units</string>
    <string name="correction">Correction</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="comments">Comments</string>
    <string name="submit">SUBMIT</string>
    <string name="position">position</string>
    <string name="food_s_name">Food\'s name</string>
    <string name="measure">Measure</string>
    <string name="no_comments_available">no comments available</string>
    <string name="mg_dl">mg/dl</string>
    <string name="corr">Corr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero_units">0 Units</string>
    <string name="cancel">CANCEL</string>
    <string name="hours">hours from injecting</string>
    <string name="factor_help">-Morning factor is used from 7:00 until 12:00\n-Afternnoon Factor is used from 12 until 20:00\n-Night factor is used from 20:00 until 7:00</string>
    <string name="correction_help">-Correction factor from 21:00 until 00:00 is 0.5g/Unit otherwise is 0.3g/Unit</string>
</resources>
