<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:background="@drawable/white_input_layout"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/food_info_layout"
        android:background="@color/white">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:padding="5dp"
            android:src="@drawable/delete"
            android:id="@+id/delete_btn"
            android:layout_margin="10dp"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/food_item"
            android:id="@+id/food_image_view"
            android:layout_marginStart="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/food_image_view"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.android.dia.views.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/food_s_name"
                android:textSize="15sp"
                android:id="@+id/food_name_text_view"/>
            <com.android.dia.views.PoppinsRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/position_text_view"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:layout_marginTop="-10dp"
                android:text="@string/position"/>
            <com.android.dia.views.PoppinsRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comment_text_view"
                android:text="@string/no_comments_available"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/yellow_left_input_layout"
        android:layout_below="@id/food_info_layout">
        <com.android.dia.views.PoppinsBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khe"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"/>
        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/khe_text_view"
            android:text="@string/khe"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"/>

    </LinearLayout>
</RelativeLayout>