<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".ui.settings.SettingsFragment">

    <com.android.dia.views.PoppinsBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apidra_parameter"
        android:textSize="15sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/title_apidra"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_apidra"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/morning_factor_layout">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/sunrise"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/sunrise"/>

        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:id="@+id/morning_factor_text_view"
            android:text="@string/morning_factor"
            android:layout_toRightOf="@id/sunrise"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"/>

        <com.android.dia.views.PoppinsRegularEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/morning_factor_edit_text"
            android:textSize="12sp"
            android:maxLength="4"
            android:text="15"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/morning_factor_layout"
        android:layout_marginTop="10dp"
        android:id="@+id/afternoon_factor_layout">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/sun"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/sun"/>

        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:id="@+id/afternoon_factor_text_view"
            android:text="@string/afternoon_factor"
            android:layout_toEndOf="@id/sun"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"/>

        <com.android.dia.views.PoppinsRegularEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:maxLength="4"
            android:id="@+id/afternoon_factor_edit_text"
            android:text="1.5"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/afternoon_factor_layout"
        android:layout_marginTop="10dp"
        android:id="@+id/night_factor_layout">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:id="@+id/night"
            android:layout_centerVertical="true"
            android:src="@drawable/moon"/>

        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:id="@+id/night_factor_text_view"
            android:text="@string/night_factor"
            android:layout_toEndOf="@id/night"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"/>

        <com.android.dia.views.PoppinsRegularEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:maxLength="4"
            android:id="@+id/night_factor_edit_text"
            android:text="1.5"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>

    <com.android.dia.views.PoppinsBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lantus_parameter"
        android:textSize="15sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/title_lantus"
        android:layout_below="@id/night_factor_layout"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/title_lantus"
        android:id="@+id/lantus_units_layout">

        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:id="@+id/lantus_units_text_view"
            android:text="@string/lantus_units"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <com.android.dia.views.PoppinsRegularEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:maxLength="4"
            android:inputType="number"
            android:id="@+id/lantus_units_edit_text"
            android:text="15"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lantus_units_layout"
        android:id="@+id/lantus_alarm_layout">

        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:id="@+id/lantus_alarm_text_view"
            android:text="@string/lantus_alarm"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:maxLength="5"
            android:id="@+id/lantus_alarm_edit_text"
            android:text="13:00"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>

    <com.android.dia.views.PoppinsBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measure_parameter"
        android:textSize="15sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/title_measure"
        android:layout_below="@id/lantus_alarm_layout"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/title_measure"
        android:id="@+id/measure_alarm_layout">

        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:id="@+id/measure_alarm_text_view"
            android:text="@string/measure_alarm"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <com.android.dia.views.PoppinsRegularEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:maxLength="2"
            android:inputType="number"
            android:id="@+id/measure_alarm_edit_text"
            android:text="2"
            android:layout_centerInParent="true"/>
        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_centerVertical="true"
            android:id="@+id/hours_text_view"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="-5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitEnd"
        android:src="@drawable/settings_deco" />

    <com.android.dia.views.PoppinsBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit_btn"
        android:background="@drawable/yellow_background"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@id/measure_alarm_layout"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/help"
        android:id="@+id/help"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"/>

</RelativeLayout>