<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_margin="10dp"
        android:id="@+id/delete_btn"
        android:src="@drawable/delete"/>

    <com.android.dia.views.PoppinsBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/measure_text_view"
        android:textSize="80sp"
        android:text="90"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"/>
    <com.android.dia.views.PoppinsRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/units"
        android:layout_marginStart="-30dp"
        android:textSize="15sp"
        android:text="@string/mg_dl"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/measure_text_view"
        android:layout_alignBottom="@id/measure_text_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:id="@+id/food_info_layout"
        android:gravity="end"
        android:layout_toEndOf="@id/measure_text_view"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.android.dia.views.PoppinsBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/khe"
                android:textSize="12sp"/>
            <com.android.dia.views.PoppinsRegularTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/khe_text_view"
                android:textColor="@color/black"
                android:text="@string/khe"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.android.dia.views.PoppinsBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/date"
                android:textSize="12sp"/>
            <com.android.dia.views.PoppinsRegularTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/date_text_view"
                android:textColor="@color/black"
                android:text="@string/date"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.android.dia.views.PoppinsBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/time"
                android:textSize="12sp"/>
            <com.android.dia.views.PoppinsRegularTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/time_text_view"
                android:textColor="@color/black"
                android:text="@string/time"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.android.dia.views.PoppinsBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/units"
                android:textSize="12sp"/>
            <com.android.dia.views.PoppinsRegularTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/unit_text_view"
                android:textColor="@color/black"
                android:text="@string/units"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.android.dia.views.PoppinsBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/corr"
                android:textSize="12sp"/>
            <com.android.dia.views.PoppinsRegularTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/correction_text_view"
                android:textColor="@color/black"
                android:text="@string/corr"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/units"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <com.android.dia.views.PoppinsRegularTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="@string/no_comments_available"
            android:id="@+id/comment_text_view"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/relax"
            android:background="@drawable/non_selected_type"
            android:id="@+id/type_of_day_image_view"/>
    </LinearLayout>
</RelativeLayout>