<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.add_food.AddFoodFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/position_yellow_background"
        android:id="@+id/position_layout">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:id="@+id/position_image"
            android:src="@drawable/position"/>
        <com.android.dia.views.PoppinsBoldEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:maxLines="1"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:hint="@string/position"
            android:background="@null"
            android:textColorHint="@color/white"
            android:padding="15dp"
            android:id="@+id/position_edit_text"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/food_image_layout"
        android:layout_below="@id/position_layout"
        android:gravity="center"
        android:background="@drawable/white_input_layout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/food_image_view"
            android:src="@drawable/add_food"
            android:layout_marginEnd="-20dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@id/food_image_layout"
        android:background="@drawable/food_name_yellow_background"
        android:id="@+id/food_name_layout">
        <com.android.dia.views.PoppinsBoldEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/food_name_edit_text"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:hint="@string/food_s_name"
            android:background="@null"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:padding="15dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:id="@+id/comments_layout"
        android:layout_below="@id/food_name_layout"
        android:background="@drawable/white_input_layout"
        android:orientation="vertical">
        <com.android.dia.views.PoppinsBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:layout_margin="10dp"/>
        <com.android.dia.views.PoppinsRegularEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="start"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:background="@null"
            android:id="@+id/comment_edit_text"
            android:textColorHint="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/comments_layout">

        <com.android.dia.views.PoppinsRegularEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:id="@+id/carbohydrates_edit_text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:background="@drawable/white_input_layout"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:inputType="number"
            android:maxLength="4"
            android:textColorHint="@color/black"
            android:hint="@string/khe"/>

        <com.android.dia.views.PoppinsBoldTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/yellow_background"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/submit_btn"
            android:text="@string/submit"/>
    </LinearLayout>
</RelativeLayout>